--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,15 @@
 
 export(ml_polygon)
 export(pb_Density)
+export(pb_assign_admin)
+export(pb_cloud_dhs_mc)
+export(pb_cloud_to_grid)
 export(pb_countFeatures)
+export(pb_displace_once_dhs)
+export(pb_displace_protocol_dhs)
+export(pb_grid_to_points)
 export(pb_integratedDensity)
+export(pb_nearest_feature_link)
 export(pb_quickRasterValJoin)
 export(pb_radiusLimitJoin)
 export(pb_rasterValJoin)
