--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(pb_displace_once_dhs)
 export(pb_displace_protocol_dhs)
 export(pb_grid_to_points)
 export(pb_integratedDensity)
+export(pb_mcDensity)
+export(pb_mcDensity_dhs)
 export(pb_nearest_feature_link)
 export(pb_quickRasterValJoin)
 export(pb_radiusLimitJoin)
