roxygenize and update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(pb_grid_to_points)
 export(pb_integratedDensity)
 export(pb_mcDensity)
 export(pb_mcDensity_dhs)
-export(pb_nearest_feature_link)
+export(pb_pointProbJoin)
 export(pb_polyJoin)
 export(pb_polyProbsJoin)
 export(pb_quickRasterValJoin)
